--- a/src/templates/_user.html
+++ b/src/templates/_user.html
@@ -53,7 +53,7 @@
 
             <div class="list-group-item text-center">
                 <div class="list-group-item form-group text-center">
-                    <div class="col-sm-12 col-md-5">
+                    <div class="col-sm-12 col-md-6">
                         <form method="POST" class="text-center" ng-submit="sendInvite()">
                             <button type="submit" href class="btn btn-primary">
                                 <span ng-show="result.Invite.Sent==0"><span class="fa fa-send"></span> Send invite</span>
@@ -61,7 +61,7 @@
                             </button>
                         </form>
                     </div>
-                    <div class="col-sm-12 col-md-offset-2 col-md-5">
+                    <div class="col-sm-12 col-md-6">
                         <form method="POST"  class="text-center" ng-submit="deleteUserWL()">
                             <input type="hidden" ng-init="accountID = result.Invite.ID" ng-model="accountID">
                             <button type="submit" class="btn btn-danger" ng-confirm-click="ARE YOU SURE? THIS CANT BE UNDONE.">
@@ -302,7 +302,7 @@
                         <form method="POST" class="text-center" ng-submit="resetUserSentRate()">
                             <input type="hidden" ng-init="accountID = result.User.ID" ng-model="accountID">
                             <select ng-model="currentResetUserSentRateOption" class="form-control pull-left" ng-options="value.label for value in resetUserSentRateOptions" style="width:14rem; margin-right:1rem;"></select>
-                            <button type="submit" href class="btn btn-primary pull-left">Go</button>
+                            <button type="submit" href class="btn btn-primary pull-left">Execute</button>
                         </form>
                     </div>
                     <div class="col-sm-12 col-md-6">
@@ -572,7 +572,7 @@
                     <form method="POST" class="text-center" ng-submit="CheckPayments()">
                         <strong>Allowed actions:</strong>
                         &nbsp;
-                        <input type="hidden" ng-init="accountID = result.User.ID" ng-model="accountID">
+                        <input type="hidden" ng-init="UserID = result.User.ID" ng-model="UserID">
                         <button type="submit" href class="btn btn-warning">
                             <span class="fa fa-eye-slash"></span> Check payment history
                         </button>
