Add to mobile beta and some tweaks

--- a/src/templates/messages.html
+++ b/src/templates/messages.html
@@ -28,7 +28,7 @@
             <span>Total messages matching criteria:</span>
             <strong>{{ messagesResponse.data.Total }}</strong>
         </div>
-        <table class="table table-bordered table-inline">
+        <table class="table table-bordered table-inline table-striped">
             <thead>
                 <tr class="active">
                     <th>Time</th>
