--- a/src/templates/_user.html
+++ b/src/templates/_user.html
@@ -52,23 +52,21 @@
             </div>
 
             <div class="list-group-item text-center">
-                <div class="list-group-item form-group text-center">
-                    <div class="col-sm-12 col-md-6">
-                        <form method="POST" class="text-center" ng-submit="sendInvite()">
-                            <button type="submit" href class="btn btn-primary">
-                                <span ng-show="result.Invite.Sent==0"><span class="fa fa-send"></span> Send invite</span>
-                                <span ng-show="result.Invite.Sent==1"><span class="fa fa-send"></span> Resend invite</span>
-                            </button>
-                        </form>
-                    </div>
-                    <div class="col-sm-12 col-md-6">
-                        <form method="POST"  class="text-center" ng-submit="deleteUserWL()">
-                            <input type="hidden" ng-init="accountID = result.Invite.ID" ng-model="accountID">
-                            <button type="submit" class="btn btn-danger" ng-confirm-click="ARE YOU SURE? THIS CANT BE UNDONE.">
-                                <span class="fa fa-trash-o"></span> Delete from waiting list
-                            </button>
-                        </form>
-                    </div>
+                <div class="list-group-item">
+                    <form method="POST" class="btn-group" ng-submit="sendInvite()">
+                        <button type="submit" href class="btn btn-primary">
+                            <span ng-show="result.Invite.Sent==0"><span class="fa fa-send"></span> Send invite</span>
+                            <span ng-show="result.Invite.Sent==1"><span class="fa fa-send"></span> Resend invite</span>
+                        </button>
+                        <input type="hidden" class="btn"> <!-- Fake sibling -->
+                    </form>
+                    <form method="POST" class="btn-group" ng-submit="deleteUserWL()">
+                        <input type="hidden" class="btn"> <!-- Fake sibling -->
+                        <input type="hidden" ng-init="accountID = result.Invite.ID" ng-model="accountID">
+                        <button type="submit" class="btn btn-danger" ng-confirm-click="ARE YOU SURE? THIS CANT BE UNDONE.">
+                            <span class="fa fa-trash-o"></span> Delete from waiting list
+                        </button>
+                    </form>
                     <div class="clearfix"></div>
                 </div>
             </div>
@@ -297,35 +295,33 @@
             <div class="clearfix"></div>
 
             <div class="list-group-item text-center">
-                <div class="list-group-item form-group text-center">
-                    <div class="col-sm-12 col-md-6">
-                        <form method="POST" class="text-center" ng-submit="resetUserSentRate()">
-                            <input type="hidden" ng-init="accountID = result.User.ID" ng-model="accountID">
-                            <select ng-model="currentResetUserSentRateOption" class="form-control pull-left" ng-options="value.label for value in resetUserSentRateOptions" style="width:14rem; margin-right:1rem;"></select>
-                            <button type="submit" href class="btn btn-primary pull-left">Execute</button>
-                        </form>
-                    </div>
-                    <div class="col-sm-12 col-md-6">
-                        <form method="POST" class="text-center" ng-submit="resetUserReputation()">
-                            <input type="hidden" ng-init="accountID = result.User.ID" ng-model="accountID">
-                            <button type="submit" href class="btn btn-primary">
-                                <span class="fa fa-crosshairs"></span> Reset reputation
-                            </button>
-                        </form>
-                    </div>
-                    <div class="clearfix"></div>
+                <div class="list-group-item">
+                    <form method="POST" ng-submit="ResetUserSentRate()">
+                        <input type="hidden" ng-init="accountID = result.User.ID" ng-model="accountID">
+                        <label>
+                            <select ng-model="currentResetUserSentRateOption" class="form-control" ng-options="value.label for value in resetUserSentRateOptions" style="width:14rem; margin-right:1rem;"></select>
+                        </label>
+                        <button type="submit" class="btn btn-primary">
+                            <span class="fa fa-trash-o"></span> Reset user sent rate
+                        </button>
+                    </form>
                 </div>
-                <div class="list-group-item form-group text-center">
-                    <div class="col-sm-12">
-                        <form method="POST" class="text-center" ng-submit="CheckSpam()">
-                            <strong>Allowed actions:</strong>
-                            &nbsp;
-                            <input type="hidden" ng-init="accountID = result.User.ID" ng-model="accountID">
-                            <button type="submit" href class="btn btn-danger">
-                                <span class="fa fa-eye-slash"></span> Check message metadata
-                            </button>
-                        </form>
-                    </div>
+
+                <div class="list-group-item">
+                    <form method="POST" class="btn-group" ng-submit="ResetUserReputation()">
+                        <input type="hidden" ng-init="accountID = result.User.ID" ng-model="accountID">
+                        <button type="submit" href class="btn btn-primary">
+                            <span class="fa fa-crosshairs"></span> Reset reputation
+                        </button>
+                        <input type="hidden" class="btn"> <!-- Fake sibling -->
+                    </form>
+                    <form method="POST" class="btn-group" ng-submit="CheckSpam()">
+                        <input type="hidden" class="btn"> <!-- Fake sibling -->
+                        <input type="hidden" ng-init="accountID = result.User.ID" ng-model="accountID">
+                        <button type="submit" href class="btn btn-danger">
+                            <span class="fa fa-eye-slash"></span> Check message metadata
+                        </button>
+                    </form>
                     <div class="clearfix"></div>
                 </div>
                 <div class="clearfix"></div>
@@ -394,23 +390,29 @@
             </div>
 
             <div class="list-group-item text-center">
-                <div class="list-group-item form-group text-center">
-                    <div class="col-sm-12 col-md-5">
-                        <form method="POST" class="text-center" ng-submit="ResetLoginPassword()">
-                            <input type="hidden" ng-init="accountID = result.User.ID" ng-model="accountID">
-                            <button class="btn btn-primary" type="submit">
-                                <span class="fa fa-retweet"></span> Reset Login Password
-                            </button>
-                        </form>
-                    </div>
-                    <div class="col-sm-12 col-md-offset-2 col-md-5">
-                        <form method="POST" class="text-center" ng-submit="logoutUser()">
-                            <input type="hidden" ng-init="accountID = result.User.ID" ng-model="accountID">
-                            <button type="submit" href class="btn btn-warning">
-                                <span class="fa fa-power-off"></span> Logout user
-                            </button>
-                        </form>
-                    </div>
+                <div class="list-group-item">
+                    <form method="POST" class="btn-group" ng-submit="AddMobileBeta()">
+                        <input type="hidden" ng-init="accountID = result.User.ID" ng-model="accountID">
+                        <button type="submit" href class="btn btn-danger">
+                            <span class="fa fa-mobile"></span> Add mobile beta
+                        </button>
+                        <input type="hidden" class="btn"> <!-- Fake sibling -->
+                    </form>
+                    <form method="POST" class="btn-group" ng-submit="logoutUser()">
+                        <input type="hidden" class="btn"> <!-- Fake sibling -->
+                        <input type="hidden" ng-init="accountID = result.User.ID" ng-model="accountID">
+                        <button type="submit" href class="btn btn-warning">
+                            <span class="fa fa-power-off"></span> Logout user
+                        </button>
+                        <input type="hidden" class="btn"> <!-- Fake sibling -->
+                    </form>
+                    <form method="POST" class="btn-group" ng-submit="ResetLoginPassword()">
+                        <input type="hidden" class="btn"> <!-- Fake sibling -->
+                        <input type="hidden" ng-init="accountID = result.User.ID" ng-model="accountID">
+                        <button class="btn btn-primary" type="submit">
+                            <span class="fa fa-retweet"></span> Reset Login Password
+                        </button>
+                    </form>
                     <div class="clearfix"></div>
                 </div>
             </div>
@@ -428,7 +430,7 @@
                 <input type="hidden" ng-init="accountID = result.User.ID" ng-model="accountID">
                 <div class="btn-group pull-right">
                     <button type="submit" class="btn btn-default btn-xs" ng-class="{'btn-primary': result.User.TwoFactor == 1}" disabled>Enabled</button>
-                    <button type="submit" class="btn btn-default btn-xs" ng-class="{'btn-primary disabled': result.User.TwoFactor == 0}" ng-click="disableTwoFactor()" >Disabled</button>
+                    <button type="submit" class="btn btn-default btn-xs" ng-class="{'btn-primary disabled': result.User.TwoFactor == 0}" ng-click="DisableTwoFactor()" >Disabled</button>
                 </div>
             </form>
 
@@ -513,9 +515,9 @@
             <form method="POST" class="list-group-item" ng-show="{{ user.Scope === 'admin' || user.Scope === 'admin super' }}">
                 <input type="hidden" ng-init="accountID = result.User.ID" ng-model="accountID">
                 <div class="btn-group pull-right">
-                    <button type="submit" ng-click="changeLevel(1)" class="btn btn-default btn-xs" ng-class="{'btn-primary': result.User.Level==1}">500 MB</button>
-                    <button type="submit" ng-click="changeLevel(2)" class="btn btn-default btn-xs" ng-class="{'btn-primary': result.User.Level==2}">1 GB</button>
-                    <button type="submit" ng-click="changeLevel(3)" class="btn btn-default btn-xs" ng-class="{'btn-primary': result.User.Level==3}">10 GB</button>
+                    <button type="submit" ng-click="ChangeLevel(1)" class="btn btn-default btn-xs" ng-class="{'btn-primary': result.User.Level==1}">500 MB</button>
+                    <button type="submit" ng-click="ChangeLevel(2)" class="btn btn-default btn-xs" ng-class="{'btn-primary': result.User.Level==2}">1 GB</button>
+                    <button type="submit" ng-click="ChangeLevel(3)" class="btn btn-default btn-xs" ng-class="{'btn-primary': result.User.Level==3}">10 GB</button>
                 </div>
                 <strong>User Level:</strong>
             </form>
@@ -546,35 +548,31 @@
             </div>
             <div class="list-group-item text-center">
                 <div class="list-group-item form-group text-center">
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-md-offset-3">
                         <form method="POST" class="input-group" ng-submit="creditUser(UserID, Credit)">
                             <input type="text" class="form-control" ng-init="UserID = this.result.User.ID; Credit = 0" ng-model="Credit" >
                             <span class="input-group-btn">
-                                <button class="btn btn-primary" type="submit">Add credit</button>
+                                <button class="btn btn-primary" type="submit">Apply credit</button>
                             </span>
-                        </form>
-                    </div>
-                    <div ng-if="result.User.StripeCustomerID != null" class="col-md-6">
-                        <form method="POST" ng-submit="deletePaymentsCustomer()">
-                            <input type="hidden" ng-init="accountID = result.User.ID" ng-model="accountID">
-                            <button type="submit" class="btn btn-danger" ng-confirm-click="ARE YOU SURE? THIS CANT BE UNDONE.">
-                                <span class="fa fa-trash-o"></span> Delete customer
-                            </button>
                         </form>
                     </div>
                     <div class="clearfix"></div>
                 </div>
                 <div class="clearfix"></div>
-            </div>
 
-            <div class="list-group-item form-group text-center">
-                <div class="col-sm-12">
-                    <form method="POST" class="text-center" ng-submit="CheckPayments()">
-                        <strong>Allowed actions:</strong>
-                        &nbsp;
+                <div class="list-group-item">
+                    <form method="POST" class="btn-group" ng-submit="deletePaymentsCustomer()">
+                        <input type="hidden" ng-init="accountID = result.User.ID" ng-model="accountID">
+                        <button type="submit" class="btn btn-danger" ng-confirm-click="ARE YOU SURE? THIS CANT BE UNDONE.">
+                            <span class="fa fa-trash-o"></span> Delete customer
+                        </button>
+                        <input type="hidden" class="btn"> <!-- Fake sibling -->
+                    </form>
+                    <form method="POST" class="btn-group" ng-submit="CheckPayments()">
+                        <input type="hidden" class="btn"> <!-- Fake sibling -->
                         <input type="hidden" ng-init="UserID = result.User.ID" ng-model="UserID">
                         <button type="submit" href class="btn btn-warning">
-                            <span class="fa fa-eye-slash"></span> Check payment history
+                            <span class="fa fa-eye-slash"></span> View payment history
                         </button>
                     </form>
                 </div>
