--- a/src/templates/_charge.html
+++ b/src/templates/_charge.html
@@ -27,11 +27,11 @@
             </div>
 
             <div class="list-group-item">
-                <strong>Currency:</strong>
+                <strong>Currency charged:</strong>
                 <code class="pull-right">{{ result.Charge.CurrencyCharged }}</code>
             </div>
             <div class="list-group-item">
-                <strong>Amount:</strong>
+                <strong>Amount charged:</strong>
                 <code class="pull-right">{{ result.Charge.AmountCharged / 100 }}</code>
             </div>
 
