--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div ng-controller="LoginController" class="container-fluid">
 
 	<div class="row">
 		<div class="col-md-4 col-md-offset-4" ng-show="showLogin">
@@ -11,9 +11,13 @@
 					<label>Login Password</label>
 					<input ng-model="password" type="password" class="form-control" id="loginPassword" placeholder="Login Password">
 				</div>
-				<div class="form-group text-right">
-					<button type="submit" class="btn btn-primary" ng-disabled="loading">Login</button>
-				</div> 
+                <div class="form-group">
+					<label>Two Factor Code:</label>
+					<input ng-model="password" type="password" class="form-control" id="twoFactorCode" placeholder="Login Password">
+				</div>
+				<div class="form-group text-center">
+					<button type="submit" class="btn btn-primary btn-lg" ng-disabled="loading">Login</button>
+				</div>
 			</form>
 		</div>
 	</div>
