Add the ability to view address display names in the user lookup

--- a/src/templates/_user.html
+++ b/src/templates/_user.html
@@ -341,6 +341,10 @@
                     <code class="pull-right">{{ x.Email }}</code>
                     <strong>Email:</strong>
                 </div>
+                <div class="list-group-item form-inline">
+                    <code class="pull-right">{{ x.DisplayName }}</code>
+                    <strong>Display name:</strong>
+                </div>
                 <div class="list-group-item">
                     <strong>Send priority (Receive allowed)</strong>
                     <div class="pull-right">
