Add AuthVersion to user

--- a/src/templates/_user.html
+++ b/src/templates/_user.html
@@ -426,6 +426,10 @@
                 <code class="pull-right">{{ result.User.PasswordMode }}</code>
             </div>
             <div class="list-group-item">
+                <strong>Auth version:</strong>
+                <code class="pull-right">{{ result.User.AuthVersion }}</code>
+            </div>
+            <div class="list-group-item">
                 <strong>Password recovery:</strong>
                 <code class="pull-right">{{ result.User.PasswordRecovery }}</code>
             </div>
