--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,25 +1,28 @@
+<login-form ng-show="twoFactor === 0"></login-form>
+<login-two-factor-form ng-show="twoFactor === 1"></login-two-factor-form>
+
 <div class="container-fluid">
 
-	<div class="row">
-		<div class="col-md-4 col-md-offset-4" ng-show="showLogin">
-			<form method="POST" id="loginForm" ng-submit="login()" ng-hide="isLoggedIn()">
-				<div class="form-group">
-					<label>Username</label>
-					<input autofocus ng-model="username" type="text" class="form-control" id="username" placeholder="Username">
-				</div>
-				<div class="form-group">
-					<label>Login Password</label>
-					<input ng-model="password" type="password" class="form-control" id="loginPassword" placeholder="Login Password">
-				</div>
+    <div class="row">
+        <div class="col-md-4 col-md-offset-4" ng-show="showLogin">
+            <form method="POST" id="loginForm" ng-submit="login()" ng-hide="isLoggedIn()">
                 <div class="form-group">
-					<label>Two Factor Code:</label>
-					<input ng-model="password" type="password" class="form-control" id="twoFactorCode" placeholder="Login Password">
-				</div>
-				<div class="form-group text-center">
-					<button type="submit" class="btn btn-primary btn-lg" ng-disabled="loading">Login</button>
-				</div>
-			</form>
-		</div>
-	</div>
+                    <label>Username</label>
+                    <input autofocus ng-model="username" type="text" class="form-control" id="username" placeholder="Username">
+                </div>
+                <div class="form-group">
+                    <label>Login Password</label>
+                    <input ng-model="password" type="password" class="form-control" id="loginPassword" placeholder="Login Password">
+                </div>
+                <div class="form-group">
+                    <label>Two Factor Code:</label>
+                    <input ng-model="password" type="password" class="form-control" id="twoFactorCode" placeholder="Login Password">
+                </div>
+                <div class="form-group text-center">
+                    <button type="submit" class="btn btn-primary btn-lg" ng-disabled="loading">Login</button>
+                </div>
+            </form>
+        </div>
+    </div>
 
 </div>
