--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,7 +1,7 @@
 <login-form ng-show="twoFactor === 0"></login-form>
 <login-two-factor-form ng-show="twoFactor === 1"></login-two-factor-form>
 
-<div class="container-fluid">
+<!-- <div class="container-fluid">
 
     <div class="row">
         <div class="col-md-4 col-md-offset-4" ng-show="showLogin">
@@ -25,4 +25,4 @@
         </div>
     </div>
 
-</div>
+</div> -->
