--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,11 +1,14 @@
-<login-form ng-show="twoFactor === 0"></login-form>
-<login-two-factor-form ng-show="twoFactor === 1"></login-two-factor-form>
-
-<!-- <div class="container-fluid">
-
+<div class="container-fluid">
     <div class="row">
-        <div class="col-md-4 col-md-offset-4" ng-show="showLogin">
-            <form method="POST" id="loginForm" ng-submit="login()" ng-hide="isLoggedIn()">
+        <div class="col-md-4 col-md-offset-4">
+            <login-form ng-show="twoFactor === 0"></login-form>
+            <login-two-factor-form ng-show="twoFactor === 1"></login-two-factor-form>
+        </div>
+    </div>
+</div>
+
+<!--
+
                 <div class="form-group">
                     <label>Username</label>
                     <input autofocus ng-model="username" type="text" class="form-control" id="username" placeholder="Username">
@@ -20,9 +23,6 @@
                 </div>
                 <div class="form-group text-center">
                     <button type="submit" class="btn btn-primary btn-lg" ng-disabled="loading">Login</button>
-                </div>
-            </form>
         </div>
-    </div>
 
-</div> -->
+ -->
