--- a/src/templates/_user.html
+++ b/src/templates/_user.html
@@ -431,7 +431,7 @@
             </div>
             <div class="list-group-item">
                 <strong>Password recovery:</strong>
-                <code class="pull-right">{{ result.User.PasswordRecovery }}</code>
+                <code class="pull-right">{{ result.User.PasswordReset }}</code>
             </div>
             <form method="POST" class="list-group-item">
                 <strong>Two-factor authentication:</strong>
