--- a/src/templates/logs.html
+++ b/src/templates/logs.html
@@ -7,7 +7,7 @@
         <input type="text" class="form-control" ng-style="{width: '100px'}" ng-model="UserID">
     </form>
 
-    <div class="row results" ng-if="ResponseLogs.data">
+    <div class="row results" ng-if="ResponseLogs">
         <div class="col-md-12">
             <div class="account">
                 <table class="table table-bordered table-inline table-striped">
@@ -19,12 +19,12 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr ng-repeat="log in ResponseLogs.data.LogAuth">
+                        <tr ng-repeat="log in ResponseLogs.Logs">
                             <td style="width: 140px">
                                 {{ log.Time * 1000 | date:'yyyy/MM/dd HH:mm:ss' }}
                             </td>
                             <td>
-                                {{ log.Event | this.LogAuthEvent }}
+                                {{ log.Event | LogAuthEvent }}
                             </td>
                             <td>
                                 {{ log.IP }}
@@ -34,7 +34,7 @@
                 </table>
             </div>
 
-            <div ng-if="ResponseLogs.data">
+            <div ng-if="ResponseLogs">
                 <hr>
                 <a class="btn btn-link" ng-click="advanced = !advanced">Show / Hide raw response</a>
                 <pre ng-show="advanced" ng-style="{'height':'100%'}">{{ ResponseLogs | json }}</pre>
