--- a/src/templates/admins.html
+++ b/src/templates/admins.html
@@ -1,28 +1,30 @@
 <div class="container-fluid">
 
-    <p class="text-center">
-	    <a href class="btn btn-primary btn-lg" ng-click="adminList()" ng-disabled="loading">
-	        Get list of admins
-	    </a><br>
-	</p>
+    <h1>Hello world</h1>
+
+    <!-- <p class="text-center">
+        <a href class="btn btn-primary btn-lg" ng-click="adminList()" ng-disabled="loading">
+            Get list of admins
+        </a><br>
+    </p>
 
     <table class="table table-bordered table-striped">
-		<thead>
-			<tr class="info">
-				<th>Username</th>
-				<th>Level</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr ng-repeat="admin in Supers">
-				<th>{{ admin }}</th>
-				<th>Super</th>
-			</tr>
-			<tr ng-repeat="super in Admins">
-				<td>{{ super }}</td>
-				<td>Admin</td>
-			</tr>
-		</tbody>
-	</table>
+        <thead>
+            <tr class="info">
+                <th>Username</th>
+                <th>Level</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="admin in Supers">
+                <th>{{ admin }}</th>
+                <th>Super</th>
+            </tr>
+            <tr ng-repeat="super in Admins">
+                <td>{{ super }}</td>
+                <td>Admin</td>
+            </tr>
+        </tbody>
+    </table> -->
 
 </div>
