--- a/src/styles/less/notifications.less
+++ b/src/styles/less/notifications.less
@@ -1,7 +1,7 @@
 body { position: relative; }
 
 .cg-notify-message {
-    display: inline-flex;
+    display: none;
     flex-direction: row;
     background: #43434f;
     box-shadow: inset 0 -1px 0 1px rgba(0,0,0,.1), 0 1px 1px rgba(0,0,0,.5);
