--- a/src/templates/authentication/loginForm.tpl.html
+++ b/src/templates/authentication/loginForm.tpl.html
@@ -1,62 +1,57 @@
 <form
     method="post"
     id="pm_login"
-    class="pm_panel alt pm_form loginForm-containter"
+    class="form-group loginForm-containter"
     novalidate role="form"
     autocomplete="on"
     ng-submit="enterLoginPassword()"
     onsubmit="return false"
     action="login">
 
-    <img src="assets/img/logo.png" height="20" alt="ProtonMail" class="logo" />
-
     <h4 class="text-center margin-bottom">
-        <i class="fa fa-user title-icon"></i> <span translate-context="Title" translate>User login</span>
+        <i class="fa fa-user title-icon"></i> <span translate-context="Title" translate>Admin panel login</span>
     </h4>
 
-    <div class="alert alert-danger" id="error521" ng-if="error">{{ error.message }}</div>
+    <div class="form-group">
+        <input
+            autofocus
+            autocapitalize="off"
+            autocorrect="off"
+            type="text"
+            ng-model="username"
+            tabindex="1"
+            id="username"
+            name="username"
+            placeholder-translate="Username"
+            class="form-control loginForm-input-username"
+            required="" />
 
-    <input
-        autofocus
-        autocapitalize="off"
-        autocorrect="off"
-        type="text"
-        ng-model="username"
-        tabindex="1"
-        id="username"
-        name="username"
-        placeholder-translate="Username"
-        class="margin loginForm-input-username"
-        required="" />
+        <input
+            maxlength="{{ ::maxPW }}"
+            autocapitalize="off"
+            autocorrect="off"
+            type="password"
+            ng-model="password"
+            tabindex="2"
+            id="password"
+            name="password"
+            class="form-control loginForm-input-password"
+            required=""
+            placeholder-translate="Password" />
+    </div>
 
-    <input
-        maxlength="{{ ::maxPW }}"
-        autocapitalize="off"
-        autocorrect="off"
-        type="password"
-        ng-model="password"
-        tabindex="2"
-        id="password"
-        name="password"
-        class="margin loginForm-input-password"
-        required=""
-        placeholder-translate="Password" />
-
-    <div class="clearfix">
-        <a
-            class="pm_button link pull-left loginForm-btn-help"
-            ng-click="displayHelpModal()"
-            translate-context="Action"
-            translate-comment="link for login help"
-            translate>Need help?</a>
+    <div class="form-group text-center">
         <button
             id="login_btn"
             type="submit"
             tabindex="3"
-            class="pm_button primary pull-right loginForm-btn-submit"
+            class="btn btn-primary btn-lg text-center loginForm-btn-submit"
             ng-class="{disabled: networkActivity.loading()}"
             translate-context="Action"
-            translate>Login</button>
+            translate
+            >
+            Login
+        </button>
     </div>
 
     <input type="hidden" id="hashed_pw" name="hashed_pw" />
