--- a/src/templates/admins.html
+++ b/src/templates/admins.html
@@ -28,7 +28,7 @@
     </tbody>
 </table>
 
-<div ng-show="ctrl.Admins == NULL && ctrl.Supers == NULL">
+<div>
     <hr>
     <a
         class="btn btn-link"
